Bugfix: during the transition, just make the non-kept nodes invisible

--- a/src/assets/style/_helpers.scss
+++ b/src/assets/style/_helpers.scss
@@ -27,6 +27,10 @@
   z-index: 2;
 }
 
+.invisible {
+  opacity: 0 !important;
+}
+
 .notifications.ghost.boo {
   z-index: 4;
 }
